--- a/src/templates/dashboard/export_data.html
+++ b/src/templates/dashboard/export_data.html
@@ -23,7 +23,7 @@
                                 </select>
                             </fieldset>
                         </div>
-                        <div class="max-w-max">
+                        <div class="max-w-max hidden">
                             <fieldset class="border rounded-md p-3">
                                 <legend class="font-bold text-xl">Record Config</legend>
                                 <select name="export_record_config_id" id="export_record_config_id"
