--- a/src/templates/includes/navbar.html
+++ b/src/templates/includes/navbar.html
@@ -3,7 +3,7 @@
     <div class="w-screen p-3 px-6 bg-blue-800 text-white shadow-xl">
       <div class="sm:flex flex-row items-center justify-between hidden">
         <div class="flex flex-row space-x-8 items-center">
-          <div class="uppercase">
+          <!-- <div class="uppercase">
             <h1>
               <a href="{{ url_for('home_page') }}">
                 <div class="flex flex-row space-x-3 drop-shadow-md p-3 rounded-md text-white hover:bg-white hover:text-blue-500 hover:shadow-md">
@@ -16,7 +16,7 @@
                 </div>
               </a>
             </h1>
-          </div>
+          </div> -->
 
         </div>
         {% if current_user.is_authenticated %}
