--- a/src/templates/dashboard/assign_task.html
+++ b/src/templates/dashboard/assign_task.html
@@ -160,7 +160,8 @@
                                                     {{edit_task_form.hidden_tag()}}
                                                     <div class="flex flex-col space-y-5">
                                                         <div class="flex flex-row space-x-5 items-center">
-                                                            <input type="text" value="{{task.id}}" name="edit_task_id" hidden>
+                                                            <input type="text" value="{{task.id}}" name="edit_task_id"
+                                                                hidden>
                                                             <!-- Input 1 -->
                                                             <div
                                                                 class="flex flex-col space-y-3 border px-3 py-3 rounded-md">
@@ -200,7 +201,8 @@
                                                                         class="py-2 w-full rounded-md px-6 bg-white border">
                                                                         <option value="">Choose a config</option>
                                                                         {% for recordConfig in recordConfigs %}
-                                                                        {% if task.record_config_id == recordConfig.id %}
+                                                                        {% if task.record_config_id == recordConfig.id
+                                                                        %}
                                                                         <option value="{{recordConfig.id}}" selected>
                                                                             {{recordConfig.id}}
                                                                         </option>
@@ -235,22 +237,19 @@
                                                             </div>
                                                         </div>
                                                         <!-- Btn -->
-                                                        <div class="self-end">
+                                                        <div class="self-end flex flex-row space-x-3">
                                                             <a href=""
                                                                 class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
                                                                 {{edit_task_form.submit(class="uppercase")}}
                                                             </a>
+                                                            <button type="button"
+                                                                class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
+                                                                data-bs-dismiss="modal">
+                                                                Close
+                                                            </button>
                                                         </div>
                                                     </div>
                                                 </form>
-                                            </div>
-                                            <div
-                                                class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
-                                                <button type="button"
-                                                    class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
-                                                    data-bs-dismiss="modal">
-                                                    Close
-                                                </button>
                                             </div>
                                         </div>
                                     </div>
@@ -354,22 +353,19 @@
                                     </div>
                                 </div>
                                 <!-- Btn -->
-                                <div class="self-end">
+                                <div class="self-end flex flex-row space-x-3">
                                     <a href=""
                                         class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">
                                         {{assign_task_form.submit(class="uppercase")}}
                                     </a>
+                                    <button type="button"
+                                        class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
+                                        data-bs-dismiss="modal">
+                                        Close
+                                    </button>
                                 </div>
                             </div>
                         </form>
-                    </div>
-                    <div
-                        class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
-                        <button type="button"
-                            class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
-                            data-bs-dismiss="modal">
-                            Close
-                        </button>
                     </div>
                 </div>
             </div>
