--- a/src/templates/dashboard/registered_speaker.html
+++ b/src/templates/dashboard/registered_speaker.html
@@ -91,7 +91,8 @@
               <td class="text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap">
                 <div class="flex flex-row space-x-10 items-center">
                   <div>
-                    <a type="button" data-bs-toggle="modal" data-bs-target="#addNewSpeaker{{speaker.id}}" class=" cursor-pointer">
+                    <a type="button" data-bs-toggle="modal" data-bs-target="#addNewSpeaker{{speaker.id}}"
+                      class=" cursor-pointer">
                       <div class="text-yellow-600">
                         <i class="fa-solid fa-pen"></i>
                       </div>
@@ -111,7 +112,8 @@
             <!-- Edit Model -->
             <div
               class="modal fade fixed top-0 left-0 hidden w-full h-full outline-none overflow-x-hidden overflow-y-auto"
-              id="addNewSpeaker{{speaker.id}}" tabindex="-1" aria-labelledby="addNewSpeaker{{speaker.id}}" aria-modal="true" role="dialog">
+              id="addNewSpeaker{{speaker.id}}" tabindex="-1" aria-labelledby="addNewSpeaker{{speaker.id}}"
+              aria-modal="true" role="dialog">
               <div
                 class="modal-dialog modal-dialog-centered modal-dialog-scrollable relative w-auto pointer-events-none min-w-max">
                 <div
@@ -141,19 +143,21 @@
                         <div class="flex flex-col space-y-5 items-start w-full">
                           <!-- id -->
                           <div>
-                            <input type="text" name="edit_id" id="edit_id"
-                              class="outline-none border p-3 rounded-md" placeholder="id" value="{{speaker.id}}" hidden>
+                            <input type="text" name="edit_id" id="edit_id" class="outline-none border p-3 rounded-md"
+                              placeholder="id" value="{{speaker.id}}" hidden>
                           </div>
                           <div class="flex flex-row space-x-3 items-center">
                             <!-- firstname -->
                             <div>
                               <input type="text" name="edit_firstname" id="edit_firstname"
-                                class="outline-none border p-3 rounded-md" placeholder="firstname" value="{{speaker.first_name}}">
+                                class="outline-none border p-3 rounded-md" placeholder="firstname"
+                                value="{{speaker.first_name}}">
                             </div>
                             <!-- lastname -->
                             <div>
                               <input type="text" name="edit_lastname" id="edit_lastname"
-                                class="outline-none border p-3 rounded-md" placeholder="lastname" value="{{speaker.last_name}}">
+                                class="outline-none border p-3 rounded-md" placeholder="lastname"
+                                value="{{speaker.last_name}}">
                             </div>
                           </div>
                           <div class="flex flex-row space-x-3 items-end">
@@ -165,14 +169,14 @@
                                   {% if speaker.gender == 'Male' %}
                                   <div class="form-check form-check-inline">
                                     <input
-                                      class="form-check-input form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                                      class=" form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
                                       type="radio" name="edit_gender" id="edit_gender" value="Male" checked>
                                     <label class="form-check-label inline-block text-gray-800"
                                       for="inlineRadio10">Male</label>
                                   </div>
                                   <div class="form-check form-check-inline">
                                     <input
-                                      class="form-check-input form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                                      class=" form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
                                       type="radio" name="edit_gender" id="edit_gender" value="Female">
                                     <label class="form-check-label inline-block text-gray-800"
                                       for="inlineRadio20">Female</label>
@@ -180,14 +184,14 @@
                                   {% else %}
                                   <div class="form-check form-check-inline">
                                     <input
-                                      class="form-check-input form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                                      class="form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
                                       type="radio" name="edit_gender" id="edit_gender" value="Male">
                                     <label class="form-check-label inline-block text-gray-800"
                                       for="inlineRadio10">Male</label>
                                   </div>
                                   <div class="form-check form-check-inline">
                                     <input
-                                      class="form-check-input form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                                      class=" form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
                                       type="radio" name="edit_gender" id="edit_gender" value="Female" checked>
                                     <label class="form-check-label inline-block text-gray-800"
                                       for="inlineRadio20">Female</label>
@@ -198,38 +202,37 @@
                             </div>
                             <!-- Age -->
                             <div>
-                              <input type="number" name="edit_age" id="edit_age" class="outline-none border p-3 rounded-md"
-                                placeholder="age" value="{{speaker.age}}">
+                              <input type="number" name="edit_age" id="edit_age"
+                                class="outline-none border p-3 rounded-md" placeholder="age" value="{{speaker.age}}">
                             </div>
                             <!-- occupation -->
                             <div>
                               <input type="text" name="edit_occupation" id="edit_occupation"
-                                class="outline-none border p-3 rounded-md" placeholder="occupation" value="{{speaker.occupation}}">
+                                class="outline-none border p-3 rounded-md" placeholder="occupation"
+                                value="{{speaker.occupation}}">
                             </div>
                           </div>
                           <!-- phone number -->
                           <div>
                             <input type="text" name="edit_phone_number" id="edit_phone_number"
-                              class="outline-none border p-3 rounded-md" placeholder="phone_number" value="{{speaker.phone_number}}">
+                              class="outline-none border p-3 rounded-md" placeholder="phone_number"
+                              value="{{speaker.phone_number}}">
                           </div>
                           <!-- btn -->
-                          <div class="self-end uppercase">
+                          <div class="self-end uppercase flex flex-row space-x-5">
                             <button type="submit"
                               class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out ml-1">
                               {{edit_speaker_form.submit(class='cursor-pointer uppercase')}}
+                            </button>
+                            <button type="button"
+                              class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
+                              data-bs-dismiss="modal">
+                              Close
                             </button>
                           </div>
                         </div>
                       </form>
                     </div>
-                  </div>
-                  <div
-                    class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
-                    <button type="button"
-                      class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
-                      data-bs-dismiss="modal">
-                      Close
-                    </button>
                   </div>
                 </div>
               </div>
@@ -239,6 +242,7 @@
           </tbody>
         </table>
       </div>
+
     </div>
   </div>
 </div>
@@ -306,13 +310,13 @@
                     <div class="flex justify-around w-full">
                       <div class="form-check form-check-inline">
                         <input
-                          class="form-check-input form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                          class="form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
                           type="radio" name="gender" id="gender" value="Male">
                         <label class="form-check-label inline-block text-gray-800" for="inlineRadio10">Male</label>
                       </div>
                       <div class="form-check form-check-inline">
                         <input
-                          class="form-check-input form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
+                          class="form-check-input appearance-none rounded-full h-4 w-4 border border-gray-300 bg-white checked:bg-blue-600 checked:border-blue-600 focus:outline-none transition duration-200 mt-1 align-top bg-no-repeat bg-center bg-contain float-left mr-2 cursor-pointer"
                           type="radio" name="gender" id="gender" value="Female">
                         <label class="form-check-label inline-block text-gray-800" for="inlineRadio20">Female</label>
                       </div>
@@ -335,27 +339,25 @@
                   placeholder="phone_number">
               </div>
               <!-- btn -->
-              <div class="self-end uppercase">
+              <div class="self-end uppercase flex flex-row space-x-5">
                 <button type="submit"
                   class="inline-block px-6 py-2.5 bg-blue-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out ml-1">
                   {{add_new_speaker_form.submit(class='cursor-pointer uppercase')}}
+                </button>
+                <button type="button"
+                  class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
+                  data-bs-dismiss="modal">
+                  Close
                 </button>
               </div>
             </div>
           </form>
         </div>
       </div>
-      <div
-        class="modal-footer flex flex-shrink-0 flex-wrap items-center justify-end p-4 border-t border-gray-200 rounded-b-md">
-        <button type="button"
-          class="inline-block px-6 py-2.5 bg-purple-600 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-700 hover:shadow-lg focus:bg-purple-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-purple-800 active:shadow-lg transition duration-150 ease-in-out"
-          data-bs-dismiss="modal">
-          Close
-        </button>
-      </div>
     </div>
   </div>
 </div>
+
 <script>
   spaker_management = document.getElementById('spaker_management')
   spaker_management.classList.add('text-blue-500')
